Successfulg loading of generated class and running the main method